# ChangeLog for dev-lang/swi-prolog
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-lang/cvs-repo/gentoo-x86/dev-lang/swi-prolog/ChangeLog,v 1.100 2007/08/11 20:20:20 keri Exp $

  11 Aug 2007; keri <keri@gentoo.org> swi-prolog-5.6.37.ebuild,
  swi-prolog-5.6.38.ebuild:
  Handle 64bit JPL conversion of object addresses to tag atoms.

*swi-prolog-5.6.38 (11 Aug 2007)

  11 Aug 2007; keri <keri@gentoo.org> +swi-prolog-5.6.38.ebuild:
  Version bump.

*swi-prolog-5.6.37 (14 Jul 2007)

  14 Jul 2007; keri <keri@gentoo.org> +swi-prolog-5.6.37.ebuild:
  Version bump.

  11 Jul 2007; keri <keri@gentoo.org> swi-prolog-5.6.36.ebuild:
  Fix freeStacks on single-threaded engine. Reported by Paul Bredbury in bug
  #184662.

*swi-prolog-5.6.36 (08 Jul 2007)

  08 Jul 2007; keri <keri@gentoo.org> +swi-prolog-5.6.36.ebuild:
  Version bump.

  20 Jun 2007; keri <keri@gentoo.org> -files/swi-prolog-5.6.18-CFLAGS.patch,
  -files/swi-prolog-5.6.18-PLBASE.patch,
  -files/swi-prolog-5.6.18-portage.patch, -files/swi-prolog-CFLAGS-r1.patch,
  -files/swi-prolog-PLBASE-r1.patch, -files/swi-prolog-cppproxy.patch,
  -files/swi-prolog-db-docs.patch, -files/swi-prolog-db-versioned.patch,
  -files/swi-prolog-gmp-sparc-alignment.patch,
  -files/swi-prolog-jpl-install.patch, -files/swi-prolog-jpl-ppc.patch,
  -files/swi-prolog-libtai.patch, -files/swi-prolog-parallel-build.patch,
  -files/swi-prolog-portage.patch,
  -files/swi-prolog-semweb-sparc-alignment.patch,
  -files/swi-prolog-test_date.patch, -files/swi-prolog-thread-tests.patch,
  -files/swi-prolog-xpce-test.patch, -swi-prolog-5.6.17-r1.ebuild:
  Remove old version.

*swi-prolog-5.6.35 (20 Jun 2007)

  20 Jun 2007; keri <keri@gentoo.org> +swi-prolog-5.6.35.ebuild:
  Version bump.

  17 Jun 2007; Raúl Porcel <armin76@gentoo.org> swi-prolog-5.6.25.ebuild:
  alpha stable wrt #168534

  11 Jun 2007; keri <keri@gentoo.org> swi-prolog-5.6.31.ebuild,