@@ -122,8 +122,8 @@ DIST swi-prolog-5.6.33-gentoo-patchset-2.tar.gz 8858 RMD160 ac376778b850e81bac83
 DIST swi-prolog-5.6.34-gentoo-patchset-2.tar.gz 8885 RMD160 280708e044e6dea74fd832865ce0b545ff6d3783 SHA1 b9a613e223f7acb3231ed446be7540f588c2062c SHA256 b1632b8d08937412f0fea5b9aae33d5c892c67ce5a1297769baa5a89db134361
 DIST swi-prolog-5.6.35-gentoo-patchset-0.tar.gz 8873 RMD160 64fa9e66018ee5d657a493a9458e0a99f10c646c SHA1 db6ee807a9b68c5fc3a98ff250e1378f2950069e SHA256 106f87a516c0d8b2103d1ac10077bf306419b40b547043ff1978531949b6ce54
 DIST swi-prolog-5.6.36-gentoo-patchset-1.tar.gz 9210 RMD160 e9c2fc5df23ebf55b47cbcff939784806b74f9d4 SHA1 4aeb42ec5cef36edbf52b38e45d82d92eb8010c1 SHA256 92cdb763935c6e284b0af36e4d3caa3b278f9adbaa95da10270f71f3bcf9b0bf
-DIST swi-prolog-5.6.37-gentoo-patchset-1.tar.gz 9894 RMD160 4ef1e7d9245193461fcb2617cc99c07636831dc6 SHA1 6cd7c1084c714ae5d2e6989295299dded733bdca SHA256 a0541a55a8aec3996a3c95be2468ac64ea3b8ff4276d00f210553f4f0cde52e8
-DIST swi-prolog-5.6.38-gentoo-patchset-1.tar.gz 8813 RMD160 582944234ff2c5aca21a011aea324e388aa16734 SHA1 13e3381e09b79f7ebf32dfc7dc0e907266980d3e SHA256 d7c19d10b8aaff613e70e02a3a9d8fbeedacfc8d6a4a7ab86b573cde77c3d036
+DIST swi-prolog-5.6.37-gentoo-patchset-1.tar.gz 10119 RMD160 597f927e4b5ab4759a6d18490cf6240aace44b32 SHA1 6a358c1509c4bd95891b25895db6234d1616eec6 SHA256 d0c405335926930a7d7e70af34e01e1faac96bf65e32129bcee68bb95d85a46a
+DIST swi-prolog-5.6.38-gentoo-patchset-1.tar.gz 9084 RMD160 d6ee630ec42e66cd176259f87d8ea001a0d6019b SHA1 2e39ba02533801559fe40f019e42ff3ed0d59087 SHA256 193f80b570a8c1f6da3355d6deea9d464736c0637599ee9408610db956d7e570
 EBUILD swi-prolog-5.6.25.ebuild 3972 RMD160 2a82356ebe4ad24ee7d85740d79911d7f0591fe7 SHA1 5264a295cdf36deab4fe56f2c485104642e373f0 SHA256 06281afc080518f5f9a05067288c556a95a357024cb086bf11d73a639a46452c
 MD5 0559075d964725ee449babb700320003 swi-prolog-5.6.25.ebuild 3972
 RMD160 2a82356ebe4ad24ee7d85740d79911d7f0591fe7 swi-prolog-5.6.25.ebuild 3972
@@ -172,18 +172,18 @@ EBUILD swi-prolog-5.6.36.ebuild 4022 RMD160 bbafb716f8705e02239276580f3469d17db0
 MD5 3f08a96002c617db9d9fe40de9530c26 swi-prolog-5.6.36.ebuild 4022
 RMD160 bbafb716f8705e02239276580f3469d17db055a0 swi-prolog-5.6.36.ebuild 4022
 SHA256 1d02f3d3413415d21ef237b33263ab5814cbd60211501f163556afb1fdcb2954 swi-prolog-5.6.36.ebuild 4022
-EBUILD swi-prolog-5.6.37.ebuild 4192 RMD160 3e51016d35b3db4e7d6faabad54240a96e58fb0c SHA1 b3797415301d93d95794ba3fa25ef7a93730b54c SHA256 47be7f93859557e45bb89e9533cd5f061d08bbcd4c19738c32e5d2ab888a89b4
-MD5 c3e96a17bd169b55be2bc1d3a8de7f12 swi-prolog-5.6.37.ebuild 4192
-RMD160 3e51016d35b3db4e7d6faabad54240a96e58fb0c swi-prolog-5.6.37.ebuild 4192
-SHA256 47be7f93859557e45bb89e9533cd5f061d08bbcd4c19738c32e5d2ab888a89b4 swi-prolog-5.6.37.ebuild 4192
-EBUILD swi-prolog-5.6.38.ebuild 3992 RMD160 e2278d1f27020c5e3e2d4c39f99ce38ae59e372d SHA1 b040468e987788c18b22994f4a1eb3472056059b SHA256 194511393f8ee0812042a98a9d0a4aebcb5baab871600c360d971746317c68a7
-MD5 ac165813bf3b789e111f72150a3dcad5 swi-prolog-5.6.38.ebuild 3992
-RMD160 e2278d1f27020c5e3e2d4c39f99ce38ae59e372d swi-prolog-5.6.38.ebuild 3992
-SHA256 194511393f8ee0812042a98a9d0a4aebcb5baab871600c360d971746317c68a7 swi-prolog-5.6.38.ebuild 3992
-MISC ChangeLog 19134 RMD160 53a027cc48c3bf6990bdde2c250dd9d71fcca743 SHA1 7efdb6ec07213d72f3b7d83cdf2a34208d09d0c6 SHA256 d0a75b16a5c6d492e381024c6f83e6927d17fffc5032714f31a06d811b24404f
-MD5 ead3f6952274fb4a741070b930a7c14b ChangeLog 19134
-RMD160 53a027cc48c3bf6990bdde2c250dd9d71fcca743 ChangeLog 19134
-SHA256 d0a75b16a5c6d492e381024c6f83e6927d17fffc5032714f31a06d811b24404f ChangeLog 19134
+EBUILD swi-prolog-5.6.37.ebuild 4245 RMD160 3460e92e395ff325b80dbb223b83fb0f9d6a153d SHA1 63dd7d57ce11cfcc5ec3cef41f460464b226c28b SHA256 cfe16539d7e630901b5c839b87a369b40d2e8dfe476f970651b752b183b00f32
+MD5 80f115451db100c035fa4bc6da005fd5 swi-prolog-5.6.37.ebuild 4245
+RMD160 3460e92e395ff325b80dbb223b83fb0f9d6a153d swi-prolog-5.6.37.ebuild 4245
+SHA256 cfe16539d7e630901b5c839b87a369b40d2e8dfe476f970651b752b183b00f32 swi-prolog-5.6.37.ebuild 4245
+EBUILD swi-prolog-5.6.38.ebuild 4045 RMD160 fa7f5dcf21e9fc3df4185b6c49e0953694590dcb SHA1 4703654356efbb18b78c281afeb1c460f4235871 SHA256 acf83db8eb7244cf730cb776c3dfec942da9db1c6829d460b96a4c42a2f35d99
+MD5 7891577065977d1225bc886f148a7e86 swi-prolog-5.6.38.ebuild 4045
+RMD160 fa7f5dcf21e9fc3df4185b6c49e0953694590dcb swi-prolog-5.6.38.ebuild 4045
+SHA256 acf83db8eb7244cf730cb776c3dfec942da9db1c6829d460b96a4c42a2f35d99 swi-prolog-5.6.38.ebuild 4045
+MISC ChangeLog 19286 RMD160 54f1b43a293c9f4afc03ef6ceae22dbf29b81c21 SHA1 ed44bed425a6205afe34ba374a2b77f63baabd2e SHA256 8d51ac6d0a05ee449bc0ab398f7efbc18e110cea0a2ed7a43ca8d3f64885577b
+MD5 fb6c1f28ad2612f70aa206c98011e3a0 ChangeLog 19286
+RMD160 54f1b43a293c9f4afc03ef6ceae22dbf29b81c21 ChangeLog 19286
+SHA256 8d51ac6d0a05ee449bc0ab398f7efbc18e110cea0a2ed7a43ca8d3f64885577b ChangeLog 19286
 MISC metadata.xml 159 RMD160 38d27fd1c5faabedefa5507dfd83cb4c952fbc8c SHA1 52b92682cf41e53e71bf432537a16215bd9546b1 SHA256 851bf218a4283a1d8ea6ef98af0119a40eaa78bfaaec49c2f3440437f52889ba
 MD5 9187f53634e60ab7eb2ac7e98b0b19f7 metadata.xml 159
 RMD160 38d27fd1c5faabedefa5507dfd83cb4c952fbc8c metadata.xml 159
@@ -224,9 +224,9 @@ SHA256 6962ad075a3fdac809087dab119b09db6a13f5865e7dcbda3e5f74134f56f113 files/di
 MD5 c352465749c9bf9c9c48ce72b64aeaef files/digest-swi-prolog-5.6.36 536
 RMD160 3b23784879b1c5aa2fa7874d450ae86f5445d7c9 files/digest-swi-prolog-5.6.36 536
 SHA256 627ebdf1fc4dc9ee7b654ca428ac6109418b792609792e869375431145f4fcd2 files/digest-swi-prolog-5.6.36 536
-MD5 3dd9e1e5c3e007832d4a936a68f2f3c9 files/digest-swi-prolog-5.6.37 536
-RMD160 a979bb1b4909a3c062d89e41be4beaaf5d6282f2 files/digest-swi-prolog-5.6.37 536
-SHA256 ce02c38334fdc0f44457d048c5fe940489186e1a9afdad68e2cc2f2ccf8af75c files/digest-swi-prolog-5.6.37 536
-MD5 5f49eaafbe4e3995a487fcedb4ce019e files/digest-swi-prolog-5.6.38 536
-RMD160 ab7af462b676977c6e446f7da5ce6b396f348501 files/digest-swi-prolog-5.6.38 536
-SHA256 06358d22e7faf64fa020d669b59df8920664d5c31a6fbf34933909bacdfba15a files/digest-swi-prolog-5.6.38 536
+MD5 6f661e365764f707a2226dcd878671a7 files/digest-swi-prolog-5.6.37 539
+RMD160 44a8d11e5731c7ed95c48cfc1bda12cb27b21312 files/digest-swi-prolog-5.6.37 539
+SHA256 6289ca934ae53abbf8c1e8e95c1dc38a2e0ed9434784ed1addfb5e18955e987a files/digest-swi-prolog-5.6.37 539
+MD5 5b7ae79c73e633e95f71167f138a59a0 files/digest-swi-prolog-5.6.38 536
+RMD160 44c37473b1b8ce791386b4bb35d2b6f98befe556 files/digest-swi-prolog-5.6.38 536
+SHA256 62f9fb16782fd99c0998cd243684bff2a9c88a72fb62138fac0ba84f7ff93c0b files/digest-swi-prolog-5.6.38 536
