@@ -1,6 +1,6 @@
 MD5 f33673029fa533b9dd0e96be0af8d2c0 pl-5.6.37.tar.gz 11941778
 RMD160 a7ccc6b4677f644edc788c086cf2db6dab9de21f pl-5.6.37.tar.gz 11941778
 SHA256 1d09190e665ffd46a86e7385de407dc0ab4832a1ed1cdca0388ca483e09bfa3c pl-5.6.37.tar.gz 11941778
-MD5 697c3aecc20d33a49c7027aa57d0659e swi-prolog-5.6.37-gentoo-patchset-1.tar.gz 9894
-RMD160 4ef1e7d9245193461fcb2617cc99c07636831dc6 swi-prolog-5.6.37-gentoo-patchset-1.tar.gz 9894
-SHA256 a0541a55a8aec3996a3c95be2468ac64ea3b8ff4276d00f210553f4f0cde52e8 swi-prolog-5.6.37-gentoo-patchset-1.tar.gz 9894
+MD5 bc353397bf9ac342670c04278a6e20b8 swi-prolog-5.6.37-gentoo-patchset-1.tar.gz 10119
+RMD160 597f927e4b5ab4759a6d18490cf6240aace44b32 swi-prolog-5.6.37-gentoo-patchset-1.tar.gz 10119
+SHA256 d0c405335926930a7d7e70af34e01e1faac96bf65e32129bcee68bb95d85a46a swi-prolog-5.6.37-gentoo-patchset-1.tar.gz 10119
