@@ -1,6 +1,6 @@
 MD5 a79bd8b7bce312b85b6ea0a99a4361fa pl-5.6.38.tar.gz 11957987
 RMD160 eb2a075fb8e7b6b38038c4786611b95e4bb4dae4 pl-5.6.38.tar.gz 11957987
 SHA256 765565d5605731d2cf2c9689dec9d5768a78cee854405f0e2ad28ad07b8b6875 pl-5.6.38.tar.gz 11957987
-MD5 4140f4a44a02ad35bb1dfd7e8b7cdcf6 swi-prolog-5.6.38-gentoo-patchset-1.tar.gz 8813
-RMD160 582944234ff2c5aca21a011aea324e388aa16734 swi-prolog-5.6.38-gentoo-patchset-1.tar.gz 8813
-SHA256 d7c19d10b8aaff613e70e02a3a9d8fbeedacfc8d6a4a7ab86b573cde77c3d036 swi-prolog-5.6.38-gentoo-patchset-1.tar.gz 8813
+MD5 dc44a29fc4bbfea0cf0bef8561aa5fbf swi-prolog-5.6.38-gentoo-patchset-1.tar.gz 9084
+RMD160 d6ee630ec42e66cd176259f87d8ea001a0d6019b swi-prolog-5.6.38-gentoo-patchset-1.tar.gz 9084
+SHA256 193f80b570a8c1f6da3355d6deea9d464736c0637599ee9408610db956d7e570 swi-prolog-5.6.38-gentoo-patchset-1.tar.gz 9084
