@@ -1,6 +1,10 @@
 # ChangeLog for dev-lang/swi-prolog
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-lang/cvs-repo/gentoo-x86/dev-lang/swi-prolog/ChangeLog,v 1.100 2007/08/11 20:20:20 keri Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-lang/cvs-repo/gentoo-x86/dev-lang/swi-prolog/ChangeLog,v 1.101 2007/08/11 21:56:19 keri Exp $
+
+  11 Aug 2007; keri <keri@gentoo.org> swi-prolog-5.6.37.ebuild,
+  swi-prolog-5.6.38.ebuild:
+  Disable thread library tests on single-threaded engines.
 
   11 Aug 2007; keri <keri@gentoo.org> swi-prolog-5.6.37.ebuild,
   swi-prolog-5.6.38.ebuild:
